# stella-search

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/database/: mod.rs  queries.rs  schema.rs
src/indexer/: mft_scanner.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/platform/: linux.rs  mod.rs
src/search/: manager.rs  mod.rs  windows_search.rs
stella-search-core/: Cargo.toml
stella-search-core/src/: lib.rs
stella-search-daemon/: Cargo.toml
stella-search-daemon/src/: main.rs
stella-search-daemon/src/database/: queries.rs
stella-search-daemon/src/indexer/: mod.rs  scanner.rs  watcher.rs
stella-search-daemon/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
stella-search-daemon/src/platform/: windows.rs
stella-search-daemon/src/search/: manager.rs  mod.rs  sqlite_search.rs
stella-search-native/: Cargo.toml
stella-search-native/src/: lib.rs  linux_search.rs  windows_search.rs
