[workspace]
resolver = "2"
members = [
    "stella-search-core",
    "stella-search-native",
    "stella-search-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Misha"]
license = "MIT"
repository = "https://github.com/misha/stella-search"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[profile.dev]
opt-level = 0
debug = true
