[package]
name = "stella-search-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File indexing daemon with SQLite FTS backend"

[[bin]]
name = "stella-search"
path = "src/main.rs"

[dependencies]
stella-search-core = { path = "../stella-search-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Glob patterns
glob = "0.3"
globset = "0.4"

# Directory walking
walkdir = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
ntfs-reader = "0.4"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "socket"] }
